container.css
/*#region container*/
.container{
    justify-items: center;
    align-items: center;
    font-optical-sizing: auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1%;
}

.tile{
    position: relative;
    overflow: hidden;
    width: 650px; 
    height: 425px; 
    background-color: black;
}
.tile img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: opacity 0.5s ease-in-out;
    cursor: url('img/hollow-circle.png'), auto;
}
.tile h2{
    position: absolute;
    top: 10%;
    left: 40%;
    font-size: 1.5em;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    text-align: center;
    color: white;
}
.tile p{
    padding: 3%;
    position: absolute;
    top: 20%;
    left: 5%;
    font-size: 1rem;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    text-align: center;
    color: white;
}
.tile:hover img {
    opacity: 0;
}

.tile:hover h2 {
  opacity: 1;
}
.tile:hover p {
    opacity: 1;
  }


@media (max-width: 850px) {
    .container{
        align-items: center;
        grid-template-columns: 1fr;
        margin: 0;
    }
    .tile{

        width: 100%; 
    }
}

